unpackaged/main/default/objects/CB_custom_object__c/CB_custom_object__c.object-meta.xml
<CustomObject>
    <label>CB custom object</label>
    <nameField>
        <label>CB custom object Name EDITED</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB custom objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>