unpackaged/main/default/objects/CB_custom_object__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CB custom objects</relationshipLabel>
    <relationshipName>CB_custom_objects</relationshipName>
    <type>Lookup</type>
</CustomField>