unpackaged/main/default/objects/CB_custom_object__c/fields/cb_checkbox__c.field-meta.xml
<CustomField>
    <fullName>cb_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test some text  
here</description>
    <label>cb checkbox</label>
    <type>Checkbox</type>
</CustomField>