unpackaged/main/default/objects/CB_custom_object__c/fields/cb_date_field__c.field-meta.xml
<CustomField>
    <fullName>cb_date_field__c</fullName>
    <label>cb date field</label>
    <type>Date</type>
</CustomField>