unpackaged/main/default/objects/CB_custom_object__c/fields/cb_formula_field__c.field-meta.xml
<CustomField>
    <fullName>cb_formula_field__c</fullName>
    <formula>(cb_new_currency_field__c  + 20) * ( CBCustomObject__r.my_currency_field__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cb formula field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>