unpackaged/main/default/objects/CB_custom_object__c/fields/cb_master_detail_field__c.field-meta.xml
<CustomField>
    <fullName>cb_master_detail_field__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CB custom objects (Account)</relationshipLabel>
    <relationshipName>cb_child_relationship_name</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>