unpackaged/main/default/objects/CB_custom_object__c/fields/cb_new_currency_field__c.field-meta.xml
<CustomField>
    <fullName>cb_new_currency_field__c</fullName>
    <label>cb new currency field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>