unpackaged/main/default/objects/CB_custom_object__c/fields/cb_number_field__c.field-meta.xml
<CustomField>
    <fullName>cb_number_field__c</fullName>
    <label>cb number field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>