unpackaged/main/default/objects/CB_custom_object__c/fields/cb_picklist_field__c.field-meta.xml
<CustomField>
    <fullName>cb_picklist_field__c</fullName>
    <label>cb picklist field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
            <value>
                <fullName>e</fullName>
            </value>
            <value>
                <fullName>f</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>