unpackaged/main/default/objects/CB_custom_object__c/fields/cb_picklist_with_global_value_set__c.field-meta.xml
<CustomField>
    <fullName>cb_picklist_with_global_value_set__c</fullName>
    <label>cb picklist with global value set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cb_global_value_set</valueSetName>
    </valueSet>
</CustomField>