unpackaged/main/default/objects/CB_custom_object__c/fields/CBCustomObject__c.field-meta.xml
<CustomField>
    <fullName>CBCustomObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CBCustomObject</label>
    <referenceTo>CBCustomObject__c</referenceTo>
    <relationshipLabel>CB custom objects</relationshipLabel>
    <relationshipName>CB_custom_objects</relationshipName>
    <type>Lookup</type>
</CustomField>